<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ramiro.autoescuela.activities.SeleccionarPruebaActivity">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    <TextView
        android:id="@+id/begin_test_instrucciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/begin_test_instrucciones"
        android:layout_alignParentTop="true"/>
    <Button
        android:id="@+id/test_normas_y_legislacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:onClick="lanzarPruebaNormasYLegislacion"
        android:text="@string/begin_test_normas_y_legislacion"
        android:layout_below="@+id/begin_test_instrucciones"
        android:layout_centerInParent="true"/>

    <Button
        android:id="@+id/test_senhales_transito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:onClick="lanzarPruebaSenhalesTransito"
        android:text="@string/begin_test_senhales_transito"
        android:layout_below="@+id/test_normas_y_legislacion"
        android:layout_centerInParent="true"/>

    <Button
        android:id="@+id/test_primeros_auxilios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:onClick="lanzarPruebaPrimerosAuxilios"
        android:text="@string/begin_test_primeros_auxilios"
        android:layout_below="@+id/test_senhales_transito"
        android:layout_centerInParent="true" />

    <Button
        android:id="@+id/test_mecanica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:onClick="lanzarPruebaMecanica"
        android:text="@string/begin_test_mecanica"
        android:layout_below="@+id/test_primeros_auxilios"
        android:layout_centerInParent="true" />
    </RelativeLayout>
</ScrollView>