<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_registrar_estudiante"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.example.ramiro.autoescuela.activities.RegistrarEstudianteActivity">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivStudentPicture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:minHeight="100dp"
                android:minWidth="100dp"
                android:maxHeight="100dp"
                android:maxWidth="100dp"
                android:scaleType="fitCenter"
                app:srcCompat="@android:drawable/ic_menu_camera" />

            <Button
                android:id="@+id/btnTakePicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_student_take_picture"
                android:onClick="lanzarActividadTomarFoto"/>

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:layout_gravity="center"
                android:rowCount="4">

                <TextView
                    android:id="@+id/tvNombres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_student_name"
                    tools:text="Nombres" />

                <EditText
                    android:id="@+id/etNombres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/tvApellidos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_student_lastname"
                    tools:text="Apellidos" />

                <EditText
                    android:id="@+id/etApellidos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/tvPIN"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_student_pin"
                    tools:text="Cedula" />

                <EditText
                    android:id="@+id/etPIN"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/tvAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_student_age"
                    tools:text="Edad" />

                <EditText
                    android:id="@+id/etAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number" />
            </GridLayout>
            <Button
                android:id="@+id/btnSaveData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_student_save_data"
                android:onClick="crearEstudiante"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
